--- a/Prahahln-HTML.html
+++ b/Prahahln-HTML.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>SŽDC - Praha hl.n.</title>
-	<link rel="stylesheet" type="text/css" href="SŽDC_Prahahln-CSS.css">
+	<link rel="stylesheet" type="text/css" href="Prahahln-CSS.css">
 
 </head>
 <body>
