--- a/Prahahln-HTML.html
+++ b/Prahahln-HTML.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>SŽDC - Praha hl.n.</title>
+	<title>Praha hl.n.</title>
 	<link rel="stylesheet" type="text/css" href="Prahahln-CSS.css">
 
 </head>
